<resources>
    <string name="app_name">ARK Navigator</string>
    <string name="app_name_debug">ARK Navigator [Debug]</string>
    <string name="as_is_sorting_selected">This option will be applied during next resources selection</string>
    <string name="resources_tags_selector_hint">Label some resources with tags to enable tags selector</string>
    <string name="folders_device_chosen_as_root">Huge directories can cause long waiting times</string>
    <string name="folders_favorite_is_already_picked">This folder is already among your favorites</string>
    <string name="folders_root_is_already_picked">This folder is already picked as root</string>
    <string name="folders_file_chosen_as_root">Can\'t go inside a file</string>
    <string name="folders_pick_favorite">FAVORITE</string>
    <string name="folders_pick_root">ADD ROOT</string>
    <string name="dialog_roots_new_title">Add new root to the index</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_pick">Pick</string>
    <string name="item_device_type">[device]</string>
    <string name="item_favorite_type">[favorite]</string>
    <string name="item_root_type">[root]</string>
    <string name="resources_filter_hint">Filter</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="what_are_crash_reports_">What are crash reports?</string>
    <string name="what_is_image_replication_">What is images cache replication?</string>
    <string name="what_is_index_replication_">What is index replication?</string>
    <string name="what_is_removing_tags">What is removing lost resources tags?</string>
    <string name="what_is_backup">What is backup?</string>
    <string name="explanation_of_this_feature">Explanation of this feature</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="all_preferences_will_be_reset_to_default">All user preferences will be reset to default. Do you wish to proceed?</string>
    <string name="crash_reports_explanation">We are constantly working to improve ARK Navigator. However, you may still encounter issues while using the app. If you choose "Send automatically", we will automatically get notified if you run into a fatal crash of the app, so we can fix the issue.</string>
    <string name="crash_reporting_enabled">Crash reporting enabled!</string>
    <string name="crash_reporting_disabled">Crash reporting disabled!</string>
    <string name="images_cache_replication_enabled">Images cache replication enabled!</string>
    <string name="images_cache_replication_disabled">Images cache replication disabled!</string>
    <string name="index_replication_enabled">Index replication enabled!</string>
    <string name="index_replication_disabled">Index replication disabled!</string>
    <string name="removing_tags_enabled">Removing lost resources tags enabled!</string>
    <string name="removing_tags_disabled">Removing lost resources tags disabled!</string>
    <string name="backup_enabled">Backup enabled!</string>
    <string name="backup_disabled">Backup disabled!</string>
    <string name="settings">Settings</string>
    <string name="crash_reports">Crash reports:</string>
    <string name="images_cache_replication">Images cache replication:</string>
    <string name="backup">Backup:</string>
    <string name="index_replication">Index replication:</string>
    <string name="removing_lost_resources_tags">Removing lost resources tags:</string>
    <string name="reset_preferences">Reset preferences</string>
    <string name="kind_tags_label">Show Kind Tags: </string>
    <string name="kind_image">Image</string>
    <string name="kind_video">Video</string>
    <string name="kind_document">Document</string>
    <string name="page_settings_title">Settings</string>
    <string name="page_roots_title">Manage folders</string>
    <string name="page_tags_title">Navigate data</string>
    <string name="normal_mode">Normal mode</string>
    <string name="focus_mode">Focus mode</string>
    <string name="menu_tags_sort_by_title">Sort by</string>
    <string name="kind_link">Link</string>
    <string name="kind_plain_text">PlainText</string>
    <string name="kind_archive">Archive</string>
    <string name="kind_unknown">Unknown</string>
    <string name="toast_tag_removed">Tag \"%1$s\" removed</string>
    <string name="toast_resources_selected">%1$d resources selected</string>
    <string name="toast_resources_selected_focus_mode">%1$d resources selected\n(%2$d hidden by focus mode)</string>
    <string name="toast_indexing_can_take_minutes">Indexing of huge folders can take minutes</string>
    <string name="toast_failed_paths">Failed to verify the following paths:\n %1$s</string>
    <string name="toast_add_paths">Add at least one folder to start using the app</string>
    <string name="scan_completed">Scan completed</string>
    <string name="scan">Scan</string>
    <string name="skip">Skip</string>
    <string name="root_scanning">Root scanning</string>
    <string name="root_scanning_description">App will scan the entire file system to find previously created roots</string>
    <string name="root_scanning_found">Found %1$d roots</string>
    <string name="scanning">Scanning</string>
    <string name="skipping_folder">Skipping %1$s</string>
    <string name="enough">Enough</string>
    <string name="access_denied">Access denied</string>
    <string name="no_app_found_to_open_this_file">No app found to open this file.</string>
    <string name="navigate">Navigate</string>
    <string name="untag">Untag</string>
    <string name="invert">Invert</string>
    <string name="crash_dialog_description">Sorry, the application crashed. Please send a report to the developers.</string>
    <string name="crash_dialog_title">Crash</string>
    <string name="crash_dialog_comment">You can add a comment here:</string>
    <string name="toast_could_not_detect_kind_for">Could not detect kind for %s</string>
    <string name="remove">Remove</string>
    <string name="move_to">Move to</string>
    <string name="copy_to">Copy to</string>
    <string name="share">Share</string>
    <string name="resources_will_be_moved">resources will be moved</string>
    <string name="resources_will_be_removed">resources will be removed</string>
    <string name="share_resources_with">Share the resources with:</string>
    <string name="common_tags">Common tags:</string>
    <string name="edit_tags">Edit tags</string>
    <string name="select_at_least_one_resource">Please select at least one resource</string>
    <string name="resource_id_label">Id\n%d</string>
    <string name="resource_name_label">Name\n%s</string>
    <string name="resource_path_label">Path\n%s</string>
    <string name="resource_size_label">Size\n%s</string>
    <string name="resource_resolution_label">Resolution\n%s</string>
    <string name="resource_duration_label">Duration\n%s</string>
    <string name="doc_page_no_label">Page numbers\n%d</string>
    <string name="link_title_label">Link Title\n%s</string>
    <string name="link_description_label">Link Description\n%s</string>
    <string name="link_label">Link\n%s</string>
    <string name="short_file_names">Short file names</string>
    <string name="short_names_disabled">Short file names disabled!</string>
    <string name="short_names_enabled">Short file names enabled!</string>
    <string name="increase_score">Score +</string>
    <string name="decrease_score">Score -</string>
    <string name="reset_scores">Reset score%1$s</string>
    <string name="collect_tag_usage_stats">Local collect tag usage statistics</string>
    <string name="collect_tag_usage_stats_enabled">Collecting tag usage statistics enabled!</string>
    <string name="collect_tag_usage_stats_disabled">Collecting tag usage statistics disabled!</string>
    <string name="popularity">Popularity</string>
    <string name="queried_time">Queried time</string>
    <string name="queried_amount">Queried amount</string>
    <string name="labeled_time">Labeled time</string>
    <string name="labeled_amount">Labeled amount</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="scores">Scores</string>
    <string name="resource_scores_erased">%1$d resource score%2$s will be erased.</string>
    <string name="utils">Utils</string>
    <string name="folder_forget_warn">Navigator will forget the folder and all its children</string>
    <string name="delete_files">Delete files</string>
    <string name="backup_files">Backup</string>
    <string name="ignore">Ignore</string>
    <string name="close">Close</string>
    <string name="corrupted_storage">Corrupted Storage</string>
    <string name="storage_corrupt_info">%1$s storage is corrupted. \nCause: %2$s. \nOpening the folder isn\'t safe</string>
    <string name="progress_text_changes_detected_indexing">Changes detected, indexing</string>
    <string name="progress_text_providing_data_storage">Providing data storage</string>
    <string name="progress_text_providing_metadata_storage">Providing metadata storage</string>
    <string name="progress_text_providing_previews_storage">Providing previews storage</string>
    <string name="progress_text_providing_root_index">Providing root index</string>
</resources>
