<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_move"
        style="@style/PopupTextButtonMedium"
        android:text="@string/move_to" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_copy"
        style="@style/PopupTextButtonMedium"
        android:text="@string/copy_to" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_tags"
        style="@style/PopupTextButtonMedium"
        android:text="@string/edit_tags" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pin"
        style="@style/PopupTextButtonMedium"
        android:text="@string/pin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_unpin"
        style="@style/PopupTextButtonMedium"
        android:visibility="gone"
        android:text="@string/unpin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_share"
        style="@style/PopupTextButtonMedium"
        android:text="@string/share" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_remove"
        style="@style/PopupTextButtonMedium"
        android:text="@string/remove" />

</LinearLayout>
