<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rounded_16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sort by"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_sorting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_popularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popularity" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_queried_ts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/queried_time" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_queried_n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/queried_amount" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_labeled_ts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labeled_time" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_labeled_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labeled_amount" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider" />

        <RadioGroup
            android:id="@+id/rg_sorting_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_ascending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_descending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descending" />

        </RadioGroup>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
